@@ -6,6 +6,9 @@
 
                                   Changelog
 
+Daniel Stenberg (23 Sep 2009)
+- HPUX does need _REENTRANT too to build really thread-safe.
+
 Daniel Stenberg (16 Sep 2009)
 - Sven Anders reported that we introduced a cert verfication flaw for OpenSSL-
   powered libcurl in 7.19.6. If there was a X509v3 Subject Alternative Name
